# tarsy-bot

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  SESSION_PERFORMANCE_OPTIMIZATION_GUIDE.md  docker-compose.yml  package-lock.json  podman-compose.yml  setup.sh  test_edge_cases.py
backend/: .coverage  .dockerignore  DEVELOPMENT.md  Dockerfile  LANGCHAIN_MIGRATION.md  MCP_LLM_INTEGRATION.md  Makefile  alembic.ini  coverage.xml  env.template  generate_token.py  pyproject.toml  requirements.txt  test_langchain_integration.py  test_mcp_integration.py  uvicorn_logging_config.json
backend/alembic/: env.py
backend/alembic/versions/: 20251002_2213_ae85467a75d2_initial_schema_baseline.py  20251003_1215_7c617b3e7c2c_add_interaction_type_to_llm_interactions.py  20251008_1832_3eafea61046d_add_events_table_for_cross_pod_eventing.py  20251010_1930_9d8fd988188d_remove_alert_id_column_from_alert_.py  20251010_2130_3d5f7251e766_add_pod_tracking_for_multi_replica_.py  20251013_1621_3717971cb125_add_cascade_deletes_for_history_retention.py  20251020_2015_8bc629164789_add_mcp_event_id_to_llm_interactions.py  20251022_1750_ab12cd34ef56_add_author_to_alert_sessions.py  20251024_2215_9f8e7d6c5b4a_add_runbook_url_to_alert_sessions.py  20251103_2257_da4300b74d0e_add_mcp_selection_to_alert_sessions.py  20251105_2122_11b500f06df2_add_chat_tables.py  20251114_1300_09f57a2a2439_add_current_iteration_to_stage_.py  20251114_1910_88f7a5fba343_add_pause_metadata_to_alert_sessions.py  20251121_1508_921cbd5111ad_add_response_metadata_to_llm_.py  20251121_1614_01b89ac17a5e_add_native_tools_config_to_llm_.py  20251125_1418_3d5ddcec5d5f_add_final_analysis_summary_field.py  20251126_1249_ba5b93c83b12_add_final_analysis_summary_field.py  20251201_1024_aedb48dd0326_add_final_analysis_summary_field_to_.py  20251204_1500_add_thinking_content_to_llm_interactions.py  20251206_1600_add_parallel_stage_execution_tracking.py  20251210_1335_f0dd17b71ce2_add_expected_parallel_count_to_stage_.py  20251216_2041_a1b2c3d4e5f6_add_paused_at_us_to_stage_executions.py  20260109_1937_b31503eedb30_add_iteration_strategy_to_stage_.py  20260121_1200_c4d5e6f7g8h9_add_executive_summary_error_to_alert_sessions.py  20260126_1335_b67c135119d7_add_slack_message_fingerprint_to_alert_.py  ae85467a75d2_initial_schema_baseline.py
backend/app/: __init__.py  main.py
backend/app/agents/: base_agent.py  kubernetes_agent.py  prompt_builder.py
backend/app/config/: settings.py
backend/app/controllers/: __init__.py  history_controller.py
backend/app/database/: __init__.py  init_db.py
backend/app/hooks/: __init__.py  base_hooks.py  history_hooks.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  alert.py  api_models.py  history.py  llm.py  mcp_config.py
backend/app/repositories/: __init__.py  base_repository.py  history_repository.py
backend/app/services/: agent_factory.py  agent_registry.py  alert_service.py  history_service.py  mcp_server_registry.py  runbook_service.py  websocket_manager.py
backend/app/utils/: logger.py  prompt_builder.py
backend/tarsy/: __init__.py  main.py
backend/tarsy/agents/: __init__.py  base_agent.py  chat_agent.py  configurable_agent.py  constants.py  exceptions.py  json_parser.py  kubernetes_agent.py  prompt_builder.py  summary_agent.py  synthesis_agent.py
backend/tarsy/config/: agent_config.py  builtin_config.py  exceptions.py  settings.py
backend/tarsy/controllers/: alert_controller.py  chat_controller.py  history_controller.py  system_controller.py  websocket_controller.py
backend/tarsy/database/: __init__.py  init_db.py  migrations.py
backend/tarsy/hooks/: __init__.py  base_hooks.py  dashboard_hooks.py  event_hooks.py  history_hooks.py  hook_context.py  hook_registry.py  typed_context.py  typed_dashboard_hooks.py  typed_history_hooks.py
backend/tarsy/integrations/: __init__.py
backend/tarsy/models/: __init__.py  agent_config.py  agent_execution_config.py  agent_execution_result.py  alert.py  alert_processing.py  api_models.py  chains.py  constants.py  db_models.py  event_models.py  history.py  history_models.py  llm.py  llm_models.py  masking_config.py  mcp_api_models.py  mcp_config.py  mcp_selection_models.py  mcp_transport_config.py  parallel_metadata.py  pause_metadata.py  processing_context.py  system_models.py  unified_interactions.py  websocket_models.py
backend/tarsy/repositories/: __init__.py  base_repository.py  event_repository.py  history_repository.py
backend/tarsy/services/: agent_factory.py  agent_registry.py  alert_service.py  cancellation_tracker.py  chain_registry.py  chat_service.py  dashboard_broadcaster.py  dashboard_connection_manager.py  dashboard_update_service.py  data_masking_service.py  execution_config_resolver.py  history_cleanup_service.py  history_service.py  iteration_config_resolver.py  mcp_client_factory.py  mcp_config_resolver.py  mcp_health_monitor.py  mcp_server_registry.py  parallel_stage_executor.py  response_formatter.py  runbook_service.py  runbooks_service.py  session_claim_worker.py  session_manager.py  slack_service.py  stage_execution_manager.py  subscription_manager.py  system_warnings_service.py  websocket_connection_manager.py  websocket_manager.py
backend/tarsy/utils/: __init__.py  agent_execution_utils.py  auth_helpers.py  error_details.py  logger.py  template_resolver.py  timestamp.py  token_counter.py  version.py
backend/tests/: README.md  conftest.py  dashboard_tests_README.md  run_all_tests.py  run_dashboard_tests.py  run_integration_tests.py  run_tests.py  run_unit_tests.py  utils.py
backend/tests/e2e/: __init__.py  conftest.py  e2e_utils.py  expected_conversations.py  expected_forced_conclusion_conversations.py  expected_native_thinking_conversations.py  expected_parallel_conversations.py  expected_pause_resume_conversations.py  parallel_test_base.py  test_agents.yaml  test_alert_with_native_tools.py  test_api_e2e.py  test_cancel_parallel_agent_e2e.py  test_cancel_session_parallel_e2e.py  test_concurrent_alert_sessions.py  test_forced_conclusion_parallel_e2e.py  (+14 more)
(+643 files in other folders)
