[project]
name = "tarsy-bot"
version = "0.1.0"
description = "TARSy: Intelligent SRE automation with AI-powered incident response"
authors = [
    {name = "Alexey Kazakov", email = "alkazako@redhat.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "PyGithub>=2.8.1,<3.0.0",
    "websockets>=12.0",
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-google-genai>=3.1.0",
    "google-genai>=1.52.0",
    "langchain-google-vertexai>=3.0.3",
    "langchain-xai>=1.0.0",
    "langchain-anthropic>=1.1.0",
    "python-multipart>=0.0.6",
    "mcp>=1.14.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.41",
    "greenlet>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "cachetools>=5.3.0",
    "PyYAML>=6.0",
    "tiktoken>=0.7.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "alembic>=1.16.5",
    "slack-sdk>=3.34.0",
]
requires-python = ">= 3.13"

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.22.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
all = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/alexeykazakov/tarsy-bot"
Repository = "https://github.com/alexeykazakov/tarsy-bot"
Documentation = "https://github.com/alexeykazakov/tarsy-bot/backend/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tarsy"]

[tool.uv]
dev-dependencies = []
# uv-specific settings for faster dependency resolution
resolution = "highest"

[tool.uv.sources]
# Configure sources for private packages if needed
# my-private-package = { git = "https://github.com/private/repo.git" }

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short", 
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "integration: Integration tests",
    "unit: Unit tests", 
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
    "external: Tests requiring external services",
]

[tool.coverage.run]
source = ["tarsy"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
target-version = ["py313"]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | \.pytest_cache
    | __pycache__
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false 

[dependency-groups]
dev = []
test = [
    "pytest-cov>=7.0.0",
]
